--- a/style.css
+++ b/style.css
@@ -1,47 +1,67 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    color: #333;
-    margin: 0;
-    padding: 0;
-    text-align: center;
+.navbar {
+    width: 100%;
+    overflow: hidden;
+    display: flex;
+    justify-content: flex-end;
+    padding: 14px 20px;
 }
 
-h1 {
-    background-color: #af4c4c;
-    color: white;
-    padding: 20px 0;
-    margin: 0;
-}
-
-a {
-    display: inline-block;
-    margin: 20px 0;
+.navbar a {
+    color: #000000;
+    padding: 10px 15px;
     text-decoration: none;
-    color: #b45528;
+    text-transform: uppercase;
     font-weight: bold;
 }
 
-img {
+.navbar a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.home{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
+    padding: 60px 9% 0;
+    color: #000000;
+}
+
+.home-info h1{
+    font-size: 55px;
+}
+
+.home-info h2{
+    font-size: 32px;
+    margin-top: -10px;
+}
+
+.home-info p{
+    font-size: 16px;
+    margin: 10px 0 25px;
+}
+
+.home-info .midias{
+    margin-left: 15px;
+}
+
+.home-info .midias a{
+    display: inline-flex;
+    padding: 8px;
+    border: 2px solid black;
     border-radius: 50%;
-    margin: 40px 0;
+    font-size: 20px;
+    color: black;
+    margin: 0 8px;
 }
 
-p {
-    width: 80%;
-    max-width: 800px;
-    margin: 20px auto;
-    text-align: left;
-    line-height: 1.6;
+.img img{
+    border-radius: 50%;
+    width: 250px;
+    height: 250px;
+    float: right; 
+    margin: 20px;
+    object-fit: cover;
 }
 
-i {
-    display: block;
-    margin-top: 20px;
-    font-size: 1.2em;
-}
-
-video {
-    margin: 20px auto;
-    display: block;
-}
