--- a/style.css
+++ b/style.css
@@ -1,65 +1,109 @@
-.navbar {
-    width: 100%;
-    overflow: hidden;
-    display: flex;
-    justify-content: flex-end;
-    padding: 14px 20px;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.navbar a {
+a{
     color: #000000;
-    padding: 10px 15px;
     text-decoration: none;
-    text-transform: uppercase;
-    font-weight: bold;
 }
 
-.navbar a:hover {
-    background-color: #ddd;
-    color: black;
+body{
+    font-family: "Kanit", sans-serif;
+}
+
+.navbar {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    padding: 25px 9%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+}
+
+.navbar .logo{
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.navbar ul {
+    display: flex;
+}
+
+.navbar ul li{
+    list-style: none;
+    margin-left: 35px;
+}
+
+.navbar ul li a{
+    font-size: 20px;
+    font-weight: 500;
+    transition: .5s;
+}
+
+.navbar ul li:hover a{
+    color: #ff6600;
 }
 
 .home{
+    color: #000000;
+    padding: 60px 9%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    height: 100%;
+    height: 100vh;
     padding: 60px 9% 0;
-    color: #000000;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .home-info h1{
-    font-size: 55px;
+    font-size: 48px;
+    font-weight: bold;
+    color: #000000;
+    margin-bottom: 10px;
 }
 
 .home-info h2{
-    font-size: 32px;
-    margin-top: -10px;
+    font-size: 24px;
+    font-weight: bold;
+    color: #292929;
+    margin-top: 0;
+    margin-bottom: 20px;
 }
 
 .home-info p{
-    font-size: 16px;
-    margin: 10px 0 25px;
+    font-size: 18px;
+    max-width: 600px;
+    color: #363636;
+    margin-bottom: 30px;
 }
 
 .home-info .midias{
-    margin-left: 15px;
+    display: flex;
+    gap: 15px;
 }
 
-.home-info .midias a{
+.home-info .midias a {
     display: inline-flex;
-    padding: 8px;
-    border: 2px solid black;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border: 2px solid #ff6600;
     border-radius: 50%;
-    font-size: 20px;
-    color: black;
-    margin: 0 8px;
+    color: #ff6600;
+    font-size: 18px;
 }
 
 .img img{
-    border-radius: 50%;
-    width: 250px;
-    height: 250px;
+    border-radius: 40%;
+    border: 3px solid #ff6600;
+    width: 350px;
+    height: 350px;
     float: right; 
     margin: 20px;
     object-fit: cover;
