--- a/style.css
+++ b/style.css
@@ -5,12 +5,13 @@
 }
 
 a{
-    color: #000000;
+    color: #ffffff;
     text-decoration: none;
 }
 
 body{
     font-family: "Kanit", sans-serif;
+    background-color: #4e4d4a;
 }
 
 .navbar {
@@ -50,7 +51,7 @@ body{
 }
 
 .home{
-    color: #000000;
+    color: #ffffff;
     padding: 60px 9%;
     display: flex;
     align-items: center;
@@ -63,14 +64,14 @@ body{
 .home-info h1{
     font-size: 48px;
     font-weight: bold;
-    color: #000000;
+    color: #ffffff;
     margin-bottom: 10px;
 }
 
 .home-info h2{
     font-size: 24px;
     font-weight: bold;
-    color: #292929;
+    color: #bebebe;
     margin-top: 0;
     margin-bottom: 20px;
 }
@@ -78,7 +79,7 @@ body{
 .home-info p{
     font-size: 18px;
     max-width: 600px;
-    color: #363636;
+    color: #b9b9b9;
     margin-bottom: 30px;
 }
 
