--- a/styleExer.css
+++ b/styleExer.css
@@ -51,13 +51,12 @@ body {
 }
 
 .container {
-    width: 80%;
-    height: 750px;
-    max-width: 1200px;
+    width: 1590px;
+    height: 800px;
     background-color: #353432; 
     border-radius: 8px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    margin: 150px auto 20px; 
+    margin: 120px auto 20px; 
     overflow: hidden;
 }
 
