--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
 }
 
 .navbar {
-    position: fixed;
+    position: relative;
     left: 0;
     top: 0;
     width: 100%;
@@ -38,6 +38,7 @@ body{
 .navbar ul li{
     list-style: none;
     margin-left: 35px;
+    position: relative;
 }
 
 .navbar ul li a{
@@ -48,6 +49,41 @@ body{
 
 .navbar ul li:hover a{
     color: #ff6600;
+}
+
+.navbar ul li .drop {
+    display: none;
+    position: absolute;
+    top: 100%; 
+    left: 0;
+    background-color: #333;
+    min-width: 150px;
+    padding: 10px 0;
+    border-radius: 5px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.navbar ul li:hover .drop {
+    display: block;
+}
+
+.navbar ul li .drop li {
+    list-style: none;
+}
+
+.navbar ul li .drop li a {
+    display: block;
+    padding: 10px 20px;
+    font-size: 18px;
+    color: #ffffff;
+    white-space: nowrap;
+    transition: 0.3s;
+}
+
+.navbar ul li .drop li a:hover {
+    background-color: #ff6600;
+    color: #ffffff;
 }
 
 .home{
