--- a/JogoSenha/styleJogoSenha.css
+++ b/JogoSenha/styleJogoSenha.css
@@ -14,13 +14,33 @@ body {
     color: #fff;
 }
 
+.botao{
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #4e4d4a;
+    border-radius: 10px;
+    text-align: center;
+    transition: background-color 0.3s;
+    margin: 10px;
+}
+
+.botao a{
+    color: white;
+    text-decoration: none;
+}
+
+.botao:hover {
+    background-color: #494845;
+}
+
 .container {
     text-align: center;
     background-color: #444;
     padding: 20px;
     border-radius: 10px;
-    width: 500px;
-    height: 350px;
 }
 
 input {
@@ -61,23 +81,4 @@ button:hover {
     padding: 5px;
     border-radius: 5px;
     margin-bottom: 5px;
-}
-
-.botao{
-    display: block;
-    padding: 10px 20px;
-    background-color: #4e4d4a;
-    border-radius: 10px;
-    text-align: center;
-    transition: background-color 0.3s;
-    margin: 10px;
-}
-
-.botao a{
-    color: white;
-    text-decoration: none;
-}
-
-.botao:hover {
-    background-color: #494845;
 }
