--- a/JogoSenha/styleJogoSenha.css
+++ b/JogoSenha/styleJogoSenha.css
@@ -20,7 +20,7 @@ body {
     left: 10px;
     display: inline-block;
     padding: 10px 20px;
-    background-color: #4e4d4a;
+    background-color: #555;
     border-radius: 10px;
     text-align: center;
     transition: background-color 0.3s;
