--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ body{
     padding: 60px 9%;
     display: flex;
     align-items: center;
-    height: 100vh;
+    height: calc(100vh - 100px);
     padding: 60px 9% 0;
     justify-content: space-between;
     flex-wrap: wrap;
